# magma

./: .bazelignore  .bazelrc  .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .hgignore  .sops.yaml  .travis.yml  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  DCO.md  Dockerfile.mme  LICENSE  README.md  REWARDS_PROGRAM.md  SECURITY.md  WORKSPACE  WORKSPACE.bazel  admin_operator.pfx  auto_fix.sh  codecov.yml  config.yml  cpp_repositories.bzl  go.mod  go_repositories.bzl  hello_test.cpp  help.html  home.html  hppify.go  index.html  jenkinsfile  modules.yml  mypy.ini  pathify.go  setup.cfg  sitemap.xml  (+5 more)
bazel/: BUILD.bazel  asn1c.bzl  bazel_invalidation_cache_key  cpp_repositories.bzl  deb_build.bzl  docker_base_images.bzl  go_repositories.bzl  magma_cc.bzl  python_dependencies.bzl  python_packages.bzl  python_repositories.bzl  python_swagger.bzl  python_swagger_specs.bzl  python_test.bzl  python_toolchain.bzl  runfiles.bzl  test_constants.bzl  testing.md  third_party_repositories.bzl
bazel/bazelrcs/: cache.bazelrc  cwag.bazelrc  docker.bazelrc  remote_caching_ro.bazelrc  remote_caching_rw.bazelrc  vm.bazelrc
bazel/docker/: Dockerfile.bazel.cache
bazel/python_utils/: BUILD.bazel  conftest.py  coverage_decorator.py
bazel/scripts/: bazel-diff.sh  bazel_diff.sh  build_and_run_bazelified_agw.sh  check_c_cpp_bazel.sh  check_py_bazel.sh  filter_test_targets.sh  link_executables_for_bazel_integ_tests.sh  link_scripts_for_bazel_integ_tests.sh  remote_cache_bazelrc_setup.sh  run_buildifier.sh  run_integ_tests.sh  run_load_tests.sh  run_sudo_tests.sh  setup_bazel_bash_completion.sh  test_python_service_imports.sh
bazel/test/: BUILD.bazel  runfiles_test.bzl
bazel/toolchains/: BUILD.bazel  cc_toolchain_config.bzl
cwf/gateway/docker/: .ci_env  .env  .prod_env  BUILD.bazel  docker-compose-dpi.override.yml  docker-compose.dpi.yml  docker-compose.integ-test.yml  docker-compose.multi-session_proxy.yml  docker-compose.nginx.yml  docker-compose.override.yml  docker-compose.yml
cwf/swagger/: BUILD.bazel  health_events.v1.yml
dev_tools/: BUILD.bazel  apply-iwyu.sh  clang_format.sh  gen_compilation_database.py  iwyu.imp  minidump-2-core
devmand/gateway/: CMakeLists.txt  Makefile  format  test
devmand/gateway/cmake/: clang.cmake  debug.cmake  gcc.cmake  release.cmake
devmand/gateway/deploy/: symphony_agent_install
devmand/gateway/docker/: .gitignore  docker-compose.fluentd.yml  docker-compose.yml  valgrind.supp
devmand/gateway/format/: Dockerfile  format
devmand/gateway/test_cfg/: dev_conf.yml  localhost.json
dp/protos/: BUILD.bazel  active_mode.proto  cbsd.proto  common.proto  enodebd_dp.proto  log.proto  pagination.proto  requests.proto
feg/gateway/registry/: BUILD.bazel  cloud_registry.go  local_registry.go  registry_test.go
feg/protos/: BUILD.bazel  basic_acct.proto  csfb.proto  envoy_controller.proto  health.proto  hello.proto  hss_service.proto  mock_core.proto  s6a_proxy.proto  s8_proxy.proto  service_health.proto  swx_proxy.proto
feg/protos/hlr/: hlr_proxy.proto
feg/protos/mconfig/: mconfigs.proto
lte/gateway/c/: BUILD.bazel  ]
lte/gateway/configs/: BUILD.bazel  captive_portal.yml  connectiond.yml  control_proxy.yml  ctraced.yml  directoryd.yml  dnsd.yml  dnsmasq.conf  enodebd.yml  envoy_controller.yml  eventd.yml  gateway.mconfig  gateway.streamed.mconfig  health.yml  kernsnoopd.yml  liagentd.yml  lighttpd.yml  logfiles.txt  magmad.yml  metricsd.yml  mme.yml  mobilityd.yml  monitord.yml  ovpn.yml  pipelined.yml  pipelined.yml_prod  pipelined_ebpf_gtp.yml  policydb.yml  redirectd.yml  redis.yml  sctpd.yml  service_registry.yml  sessiond.yml  sessiond.yml_prod  smsd.yml  spgw.yml  state.yml  streamer.yml  subscriberdb.yml  tarazedd.yml
lte/gateway/docker/: .env  BUILD.bazel  Dockerfile.mme  README.md  build.sh  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  publish.sh  readme.md
lte/gateway/python/: BUILD.bazel  Makefile  defs.mk  icmpv6.py  precommit.py  setup.py  test8165.py
lte/gateway/release/: BUILD.bazel  Makefile  README.release  README_package.md  agw_setup_ubuntu.sh  build-magma.sh  build-ovs.sh  change_source.sh  deb_dependencies.bzl  fabfile.py  magma-postinst  magma-postinst-bazel  magma.lockfile  magma.lockfile.debian  magma.lockfile.ubuntu  magma.lockfile.ubuntu_ref  mirrored_packages  mirrored_packages_focal  promote.py  pydep  update_deb_meta_info.sh.template  upgrade_magma.sh
lte/protos/: BUILD  BUILD.bazel  SessionStateEnforcer113.cpp  abort_session.proto  apn.proto  common_types.proto  diam_errors.proto  enodebd.proto  eps_authentication.proto  ha_orc8r.proto  ha_service.proto  had_orc8r.proto  ip.proto  keyval.proto  meteringd.proto  mme_nas_state.proto  mobilityd.proto  nas_state.proto  pgw.proto  pipelined.proto  policydb.proto  s1ap_service.proto  s1ap_state.proto  s6a_proxy.proto  s6a_service.proto  sctpd.proto  session_manager.proto  session_manager.proto_bkup  session_manager.proto_bkup2  session_manager.proto_merged_from_113_probably_not_working  session_manager.proto_raw_from_113  session_manager.proto_working_till_pdu_estab_accept  smfupfif.proto  sms_orc8r.proto  spgw_service.proto  subscriberauth.proto  subscriberdb.proto
lte/protos/mconfig/: mconfigs.proto
lte/protos/oai/: BUILD.bazel  common_types.proto  mme_nas_state.proto  nas_state.proto  ngap_amf.proto  ngap_state.proto  s1ap_state.proto  sctp_ngap.proto  sgw_state.proto  spgw_state.proto  std_3gpp_types.proto
orc8r/protos/: BUILD  BUILD.bazel  bootstrapper.proto  certifier.proto  common.proto  ctraced.proto  digest.proto  directoryd.proto  eventd.proto  identity.proto  logging_service.proto  magmad.proto  mconfig.proto  metricsd.proto  redis.proto  service303.proto  service_registry.proto  service_status.proto  southbound.proto  state.proto  streamer.proto  sync_rpc_service.proto  tenants.proto
orc8r/protos/mconfig/: mconfigs.proto
orc8r/protos/prometheus/: metrics.proto
src/go/agwd/: BUILD.bazel  main.go
src/go/capture/: BUILD.bazel  (+4 more)
(+28528 files in other folders)
