# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    lint_warnings = ["all"],
    mode = "fix",
)

buildifier_test(
    name = "check_starlark_format",
    size = "small",
    timeout = "short",
    srcs = ["//:starlark_files"],
    lint_mode = "warn",
    lint_warnings = ["all"],
    verbose = True,
)

filegroup(
    name = "starlark_files",
    srcs = glob(
        include = [
            "**/*.BUILD",
            "**/*.bzl",
            "**/*.sky",
            "**/BUILD",
            "**/BUILD.*.bazel",
            "**/BUILD.*.oss",
            "**/BUILD.bazel",
            "**/WORKSPACE",
            "**/WORKSPACE.*.bazel",
            "**/WORKSPACE.*.oss",
            "**/WORKSPACE.bazel",
            "*.BUILD",
            "*.bzl",
            "*.sky",
            "BUILD.*.bazel",
            "BUILD.*.oss",
            "WORKSPACE.*.bazel",
            "WORKSPACE.*.oss",
        ],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "go_repositories.bzl",  # generated file
        ],
    ),
)

# gazelle:prefix github.com/magma/magma
# gazelle:exclude .cache/
# gazelle:exclude orc8r/
# gazelle:exclude lte/
# gazelle:exclude feg/
# gazelle:exclude cwf/
# gazelle:exclude fbinternal/
# TODO: Remove when we move proto generation to bazel - this prevents gazelle from causing import issues in the meantime.
# gazelle:exclude **/*.proto/
gazelle(name = "gazelle")
