# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_java//java:defs.bzl", "java_binary")

# gazelle:prefix github.com/magma/magma
# gazelle:exclude .cache/
# gazelle:exclude orc8r/
# gazelle:exclude lte/
# gazelle:exclude feg/
# gazelle:exclude cwf/
# TODO: Remove when we move proto generation to bazel - this prevents gazelle from causing import issues in the meantime.
# gazelle:exclude **/*.proto/
gazelle(name = "gazelle")

java_binary(
    name = "bazel-diff",
    main_class = "com.bazel_diff.Main",
    runtime_deps = ["@bazel_diff//jar"],
)
