# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":python_toolchain.bzl", "configure_python_toolchain")

configure_python_toolchain()

config_setting(
    name = "enable_asan",
    values = {
        "define": "enable_asan=1",
    },
)

config_setting(
    name = "enable_lsan",
    values = {
        "define": "enable_lsan=1",
    },
)

config_setting(
    name = "set_test_flag",
    values = {
        "define": "set_test_flag=1",
    },
)

